--- a/thyrosimIM/src/notebooks/animator.ipynb
+++ b/thyrosimIM/src/notebooks/animator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "        apng_frames.append(png_path)\n",
     "    \n",
     "    # Save the APNG\n",
-    "    APNG.from_files(apng_frames, delay=10).save(\"animation/optimization_posttimefix.png\")\n",
+    "    APNG.from_files(apng_frames, delay=10).save(\"animation/optimization_08.18.1.png\")\n",
     "\n",
     "create_apng_from_folder(\"img\")\n"
    ]
