--- a/thyrosimIM/src/notebooks/scratch.ipynb
+++ b/thyrosimIM/src/notebooks/scratch.ipynb
@@ -206,6 +206,67 @@
     "    return loss_vector\n",
     "end"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "2\n",
+      "4\n",
+      "3\n",
+      "7\n",
+      "4\n",
+      "2021225\n",
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "for (i, value) in enumerate([1,4,7,(20,21,22),25])\n",
+    "    println(i)\n",
+    "    if value isa Int\n",
+    "        println(value)\n",
+    "    else\n",
+    "        for i in value\n",
+    "            print(i)\n",
+    "        end\n",
+    "    end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "false"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "g = ()\n",
+    "!isempty(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
