Upload for Karim and Hudson

--- a/thyrosimIM/src/notebooks/DDR.ipynb
+++ b/thyrosimIM/src/notebooks/DDR.ipynb
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -822,6 +822,33 @@
     "    ic[25] = 1.43e8 #TGAb\n",
     "\n",
     "    return ic\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using DelimitedFiles\n",
+    "\n",
+    "parameters = initialize_all()\n",
+    "initial_conditions = ics()\n",
+    "# Specify the file path\n",
+    "file_path = \"thyrosimIM_params.txt\"\n",
+    "ic_path = \"ICs.txt\"\n",
+    "\n",
+    "# Convert the vector to a formatted string\n",
+    "formatted_string = \"[$(join(parameters, ','))]\"\n",
+    "formatted_ICs = \"[$(join(initial_conditions, ','))]\"\n",
+    "\n",
+    "# Write the formatted string to a text file\n",
+    "open(file_path, \"w\") do file\n",
+    "    println(file, formatted_string)\n",
+    "end\n",
+    "open(ic_path, \"w\") do file\n",
+    "    println(file, formatted_ICs)\n",
     "end"
    ]
   },
